@@ -148,6 +148,7 @@ Bug fixes:
 - PR#6032: better Random.self_init under Windows
 - PR#6033: Matching.inline_lazy_force needs eta-expansion (command-line flags)
 - PR#6056: Using 'match' prevents generalization of values
+- PR#6060: ocamlbuild rules for -principal, -strict-sequence and -short-paths
 Internals:
 - Moved debugger/envaux.ml to typing/envaux.ml to publish env_of_only_summary
   as part of compilerlibs, to be used on bin-annot files.
